--- a/SigningPortalDemo/SigningPortalDemo.csproj
+++ b/SigningPortalDemo/SigningPortalDemo.csproj
@@ -12,4 +12,9 @@
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.3" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Update="Pages\SignDemo.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+  </ItemGroup>
 </Project>
