Changed default URLs to https://sign-api.go.nexusgroup.com

--- a/SigningPortalDemo/appsettings.Development.json
+++ b/SigningPortalDemo/appsettings.Development.json
@@ -9,10 +9,10 @@
   },
   "Api": {
     "AuthApi": {
-      "Url": "https://signapiplay.azurewebsites.net/auth"
+      "Url": "https://sign-api.go.nexusgroup.com/auth"
     },
     "SignApi": {
-      "Url": "https://signapiplay.azurewebsites.net"
+      "Url": "https://sign-api.go.nexusgroup.com"
     }
   }
 }
